fix: card component now has correct spacing

--- a/src/app/components/restaurant-card/restaurant-card.component.scss
+++ b/src/app/components/restaurant-card/restaurant-card.component.scss
@@ -23,12 +23,15 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 8px;
-    margin: 0 auto;
     
     &-restaurant-name {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
       font-size: 20px;
       font-weight: bold;
-      margin-bottom: 10px;
+      min-height: 48px;
     }
     
     &-rating {
@@ -41,17 +44,19 @@
       width: 100%;
       display: flex;
       flex-wrap: wrap;
+      gap: 5px;
       margin-top: 5px;
       list-style: none;
       margin: 8px 0 0 0;
       padding: 0;
   
       li {
-        margin: 5px;
+        // margin: 5px;
         padding: 5px 10px;
         background-color: #f0f0f0;
         border-radius: 20px;
         font-size: 12px;
+        cursor: default;
       }
     }
   }
